[tool.poetry]
name = "ska-pst-lmc"
version = "0.1.0"
description = "PST-LMC Tango device package"
authors = ["Team PST"]
license = "BSD-3-Clause"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
ska-tango-base = "^0.13.0"
ska-telescope-model = "^1.3.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-bdd = "^4.0.2"
pytest-cov = "^2.12.1"
pytest-forked = "^1.3.0"
pytest-json-report = "^1.4.0"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
pytest-pydocstyle = "^2.2.0"
pytest-pylint = "^0.18.0"
pytest-runner = "^5.3.1"
isort = "^5.9.1"
flake8 = "^3.9.2"
flake8-formatter-junit-xml = "^0.0.6"
coverage = "^5.5"
mock = "^4.0.0"
Sphinx = "^4.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
