[tool.poetry]
name = "ska-pst-lmc"
version = "0.1.0"
description = "PST-LMC Tango device package"
authors = ["Team PST"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/pst/ska-pst-lmc.git"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.7"
ska-tango-base = "^0.13.0"
ska-telmodel = "^1.3.2"
readerwriterlock = "^1.0.9"
six = "1.15.0"
numpy = "1.21.0"
backoff = "^2.0.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
docformatter = "^1.4"
mypy = "^0.941"
pylint = "^2.8.3"
pytest = "^6.2.4"
pytest-bdd = "^4.0.2"
pytest-cov = "^2.12.1"
pytest-forked = "^1.3.0"
pytest-json-report = "^1.4.0"
pylint-junit = "^0.3.2"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
pytest-pydocstyle = "^2.2.0"
pytest-pylint = "^0.18.0"
pytest-runner = "^5.3.1"
isort = "^5.9.1"
flake8 = "^3.9.2"
flake8-black = "^0.3.2"
flake8-docstrings = "^1.6.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.2.5"
coverage = "^5.5"
mock = "^4.0.0"
Sphinx = "^4.0.2"
sphinx-rtd-theme = "^1.0.0"
recommonmark = "^0.7.1"
autoflake = "^1.4"
packaging = "~20.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
PstReceive = 'ska_pst_lmc.receiver.receive_device:main'
PstTestClient = 'ska_pst_lmc.test.test_device:main'
