[tool.poetry]
name = "ska-pst-lmc"
version = "0.6.1"
description = "PST-LMC Tango device package"
authors = ["Team PST"]
license = "BSD-3-Clause"
repository = "https://gitlab.com/ska-telescope/pst/ska-pst-lmc.git"

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.0"
ska-tango-base = "^0.17.0"
ska-telmodel = "^1.3.2"
readerwriterlock = "^1.0.9"
backoff = "^2.0.1"
six="^1.15.0"
protobuf = "^3"
grpcio = "^1.47.0"
ska-csp-lmc-base = "^0.1.0"
pytango = "9.3.3"

[tool.poetry.group.dev.dependencies]
autoflake = "^1.4"
black = "^22.1.0"
coverage = "^6.3.2"
docformatter = "^1.4"
flake8 = "^4.0.1"
flake8-black = "^0.3.2"
flake8-docstrings = "^1.6.0"
flake8-formatter-junit-xml = "^0.0.6"
flake8-rst-docstrings = "^0.2.5"
gitchangelog = "^3.0.4"
grpcio-tools = "^1.47.0"
ipython = "^8.4.0"
isort = "^5.9.1"
mock = "^4.0.0"
mypy = "^0.941"
packaging = "20.9"
protobuf-init = "^0.1.0"
pylint = "^2.8.3"
pylint-junit = "^0.3.2"
pytest = "^7.1.2"
pytest-bdd = "^5.0.0"
pytest-cov = "^3.0.0"
pytest-forked = "^1.3.0"
pytest-json-report = "^1.4.0"
pytest-metadata = "^1.11.0"
pytest-mock = "^3.6.1"
pytest-pycodestyle = "^2.2.0"
pytest-pydocstyle = "^2.2.0"
pytest-pylint = "^0.18.0"
pytest-runner = "^6.0.0"
ska-pst-testutils = {path = "./resources/ska-pst-testutils"}
ska-tango-testing = "^0.4.1"

[tool.poetry.group.docs.dependencies]
docutils = "<0.18"
markupsafe = "<2.1.0"
recommonmark = "^0.7.1"
sphinx = "5.1.1"
sphinx-autodoc-typehints = "1.19.1"
sphinx-rtd-theme = "1.0.0"
sphinxcontrib-plantuml = "0.25"
transitions = "^0.9.0"
typing-extensions = "^4.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
PstBeam = 'ska_pst_lmc.beam.beam_device:main'
PstDsp = 'ska_pst_lmc.dsp.dsp_device:main'
PstSmrb = 'ska_pst_lmc.smrb.smrb_device:main'
PstReceive = 'ska_pst_lmc.receiver.receive_device:main'
